Fix maven plugins to add exports where necessary